// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExportButton render with props 1`] = `
<div>
  <a
    aria-disabled="false"
    class="pf-v5-c-button pf-m-secondary export-csv"
    data-ouia-component-id="OUIA-Generated-Button-secondary-2"
    data-ouia-component-type="PF5/Button"
    data-ouia-safe="true"
    href="url"
    title="title info"
  >
    info
  </a>
</div>
`;

exports[`ExportButton render without props 1`] = `
<div>
  <a
    aria-disabled="false"
    class="pf-v5-c-button pf-m-secondary export-csv"
    data-ouia-component-id="OUIA-Generated-Button-secondary-1"
    data-ouia-component-type="PF5/Button"
    data-ouia-safe="true"
    href="/?format=csv"
    title="Export to CSV"
  >
    Export
  </a>
</div>
`;
